--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,8 @@ html {
 }
 
 .app {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+  font-family: var(--font-family-primary);
   padding: 2rem;
   color: var(--text-primary);
+  font-size: var(--font-size-lg);
 }
